force-app/main/default/objects/Bank_Account__c/Bank_Account__c.object-meta.xml
<CustomObject>
    <description>Details of Bank Account Information used to display on the Invoice documents sent to Customers.</description>
    <label>Bank Account</label>
    <nameField>
        <displayFormat>BA- {00000}</displayFormat>
        <label>Bank Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>