force-app/main/default/objects/Bank_Account__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Bank Account Name.</description>
    <label>Account Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>