force-app/main/default/objects/Bank_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Bank Account Number.</description>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>