force-app/main/default/objects/Bank_Account__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <description>Name of the Bank.</description>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>