force-app/main/default/objects/Bank_Account__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <displayFormat>BA-{00000}</displayFormat>
    <label>Bank Account</label>
    <type>AutoNumber</type>
</CustomField>