force-app/main/default/objects/Bank_Account__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <description>Unique Sequence Number Prefix.</description>
    <label>Bank Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>