force-app/main/default/objects/Bank_Account__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>Bank IBAN number.</description>
    <label>IBAN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>